refactor: rename test files

--- a/projects/until-destroyed-test/src/app/until-destroyed-test/until-destroyed-test.component.html
+++ b/projects/until-destroyed-test/src/app/until-destroyed-test/until-destroyed-test.component.html
@@ -1,4 +1,4 @@
-<p>Je suis le composant AutoUnsubscribeTest</p>
+<p>Je suis le composant UntilDestroyedTest</p>
 <app-until-destroyed-content-test *ngIf="showContent1" id=1></app-until-destroyed-content-test>
 <app-until-destroyed-content-test *ngIf="showContent2" id=2></app-until-destroyed-content-test>
 <button (click)="onClickOnDestroyContentButton1()">Destroy content 1</button>
